--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-"Hello World" 
+---
+layout: default
+title: Home
+---
+
+<div>Welcome to The Art of Product :)</div>
+
+Here is a test link to [Google](http://www.google.com)
