--- a/index.html
+++ b/index.html
@@ -4,3 +4,14 @@ title: Home
 ---
 
 <div>Welcome to The Art of Product :)</div>
+
+<div>Here are my posts:</div>
+
+<ul>
+    {% for post in site.posts %}
+        <li>
+            <a href="{{ post.url }}">{{ post.title }}</a>
+            <p>{{ post.excerpt }}</p>
+        </li>
+    {% endfor %}
+</ul>
