--- a/index.html
+++ b/index.html
@@ -3,15 +3,23 @@ layout: default
 title: Home
 ---
 
-<div>Welcome to The Art of Product :)</div>
+<h1>Welcome!</h1>
 
-<div>Here are my posts:</div>
+<p>
+My name is Peter and I've been working in technology
+for over fifteen years, in roles ranging from 
+engineer to CTO to Product Manager. Throughout this time
+I've learned alot about what does and doesn't work in the technology
+industry, and have created this blog to share my experiences, foster
+discussion, and provide a platform where we can all learn from one another.
+</p>
+
+<p>Articles</p>
 
 <ul>
     {% for post in site.posts %}
         <li>
             <a href="{{ post.url }}">{{ post.title }}</a>
-            <p>{{ post.excerpt }}</p>
         </li>
     {% endfor %}
 </ul>
