--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ My name is Peter and I've been working in technology
 for over fifteen years, in roles ranging from 
 engineer to CTO to Product Manager. Throughout this time
 I've learned alot about what does and doesn't work in the technology
-industry, and have created this blog to share my experiences, foster
-discussion, and provide a platform where we can all learn from one another.
+industry, and have created this blog to share my experiences and foster
+discussion.
 </p>
 
 <p>Articles</p>
